--- a/cv.html
+++ b/cv.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>My CV</title>
-    <link rel="stylesheet" href="cvstyle.css">
+    <link rel="stylesheet" href="./css/cvstyle.css">
+    <link rel="stylesheet" href="./css/nav.css">
 </head>
+
 <body>
     <nav>
-        <a href="cv.html">My CV</a>
         <a href="index.html">My Portfolio</a>
+        <a href="cv.html">My CV</a>
     </nav>
-    <main class="cv">
+    <main>
         <h1>Education</h1>
         <h3>King Abdulaziz University, Jeddah, Saudi Arabia</h3>
         <p>
-            Bachelor of Science in information systems, <span class="italicText">2022</span><br>
+            Bachelor of Science in information systems, <span>2022</span><br>
             Minor in Decision support systems<br>
             GPA: 4.49/5
         </p>
         <h1>Experience</h1>
         <h3>Senior System Analyst, Modern Building Leaders, Jeddah.</h3>
-        <h5 class="italicText">2022 - Present</h5>
+        <h5>2022 - Present</h5>
         <ul>
-            <li>Provide application support for Oracle ERP and internal systems, resolving operational issues raised by business units.</li>
+            <li>Provide application support for Oracle ERP and internal systems, resolving operational issues raised by
+                business units.</li>
             <li>Monitor system behavior using in-house dashboards and logs, escalating to the developer.</li>
-            <li>Reduced manual processing time by automating business workflows (e.g., training certificate generation cut from 9 hours to 20 minutes).</li>
+            <li>Reduced manual processing time by automating business workflows (e.g., training certificate generation
+                cut from 9 hours to 20 minutes).</li>
             <li>Maintain and develop SharePoint, improving data access and cross-departmental communication.</li>
             <li>Develop and maintain technical documentation and user guides.</li>
             <li>Design and build dynamic dashboards using Power BI.</li>
@@ -32,8 +37,8 @@
         <h1>Skills</h1>
         <h3>Technical Skills</h3>
         <ul>
-            <li>Databases & Tools: Oracle ERP, SQL, Power BI, SharePoint</li>
-            <li>Monitoring & Visualization: Power BI, SharePoint Logs</li>
+            <li>Databases & Tools: Oracle ERP, SQL, SharePoint</li>
+            <li>Dashboards & Visualization: Power BI</li>
             <li>Automation: Power Automate</li>
             <li>General: Process Improvement, and Technical Documentation</li>
         </ul>
@@ -47,4 +52,5 @@
         </ul>
     </main>
 </body>
+
 </html>
