--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/Style.css">
-    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="nav.css">
     <title>My Resume</title>
 
 </head>
@@ -57,5 +57,6 @@
         </p>
     </footer>
 </body>
+
 
 </html>
