--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/Style.css">
+    <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="nav.css">
     <title>My Resume</title>
 
@@ -60,3 +60,4 @@
 
 
 </html>
+
