--- a/cv.html
+++ b/cv.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My CV</title>
-    <link rel="stylesheet" href="./css/cvstyle.css">
-    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="cvstyle.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
@@ -52,5 +52,6 @@
         </ul>
     </main>
 </body>
+
 
 </html>
